feature(hibernate7): Migrate to hibernate 7 - bump hibernate version to 7.2.0.FINAL - bump spring version to 7.0.2 - migrate newInstance reflection call